// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Button base demo works fine 1`] = `
<base>
  <wx-view
    class="box"
  >
    <t-button
      block="{{true}}"
      disabled="{{false}}"
      tClass="external-class"
      theme="primary"
    >
      强按钮
    </t-button>
    <t-button
      block="{{true}}"
      disabled="{{false}}"
      tClass="external-class"
      theme="primary"
      variant="outline"
    >
      弱按钮
    </t-button>
    <t-button
      block="{{true}}"
      disabled="{{false}}"
      tClass="external-class"
      variant="outline"
    >
      次按钮
    </t-button>
    <t-button
      block="{{true}}"
      disabled="{{false}}"
      icon="app"
      tClass="external-class"
      theme="primary"
      variant="outline"
    >
      带图标按钮
    </t-button>
    <t-button
      block="{{true}}"
      disabled="{{false}}"
      tClass="external-class"
      theme="danger"
    >
      强告警按钮
    </t-button>
    <t-button
      block="{{true}}"
      disabled="{{false}}"
      tClass="external-class"
      theme="danger"
      variant="outline"
    >
      弱告警按钮
    </t-button>
  </wx-view>
  <wx-view
    class="full-width"
  >
    <wx-view
      class="box"
    >
      <t-button
        block="{{true}}"
        disabled="{{false}}"
        ghost="{{true}}"
        tClass="external-class"
      >
        幽灵按钮
      </t-button>
    </wx-view>
  </wx-view>
  <wx-view
    class="box"
  >
    <t-button
      block="{{true}}"
      disabled="{{false}}"
      tClass="external-class"
      theme="primary"
      variant="text"
    >
      文字按钮
    </t-button>
  </wx-view>
  <t-button
    block="{{true}}"
    disabled="{{false}}"
    size="large"
    tClass="external-class no-border-radius"
    theme="primary"
  >
    通栏按钮
  </t-button>
  <t-button-group>
    <t-button
      block="{{true}}"
      disabled="{{false}}"
      size="large"
      tClass="external-class no-border-radius no-border"
    >
      次按钮
    </t-button>
    <t-button
      block="{{true}}"
      disabled="{{false}}"
      size="large"
      tClass="external-class no-border-radius"
      theme="primary"
    >
      主按钮
    </t-button>
  </t-button-group>
</base>
`;

exports[`Button Button icon-btn demo works fine 1`] = `
<icon-btn>
  <wx-view
    class="box"
  >
    <t-button
      content="带图标按钮"
      disabled="{{false}}"
      icon="app"
      tClass="external-class"
      theme="primary"
    />
    <t-button
      disabled="{{false}}"
      icon="app"
      shape="round"
      tClass="external-class"
      theme="primary"
    >
      <wx-text>
        带图标按钮
      </wx-text>
    </t-button>
  </wx-view>
  <wx-view
    class="box"
  >
    <t-button
      disabled="{{false}}"
      icon="app"
      shape="square"
      tClass="external-class"
      theme="primary"
    />
    <t-button
      disabled="{{false}}"
      icon="app"
      shape="circle"
      tClass="external-class"
      theme="primary"
    />
  </wx-view>
  <wx-view
    class="box"
  >
    <t-button
      disabled="{{false}}"
      loading="{{true}}"
      shape="square"
      tClass="external-class"
      theme="primary"
    />
    <t-button
      disabled="{{false}}"
      loading="{{true}}"
      tClass="external-class"
      theme="primary"
    >
      加载中...
    </t-button>
  </wx-view>
</icon-btn>
`;

exports[`Button Button size demo works fine 1`] = `
<size>
  <wx-view
    class="box align-bottom"
  >
    <t-button
      size="large"
      tClass="external-class"
      theme="primary"
    >
      按钮 44
    </t-button>
    <t-button
      tClass="external-class"
      theme="primary"
    >
      按钮 40
    </t-button>
    <t-button
      size="small"
      tClass="external-class"
      theme="primary"
    >
      按钮 36
    </t-button>
  </wx-view>
  <wx-view
    class="box align-bottom"
  >
    <t-button
      icon="app"
      shape="round"
      size="large"
      tClass="external-class"
      theme="primary"
    >
      按钮
    </t-button>
    <t-button
      icon="app"
      shape="round"
      tClass="external-class"
      theme="primary"
    >
      按钮
    </t-button>
    <t-button
      icon="app"
      shape="round"
      size="small"
      tClass="external-class"
      theme="primary"
    >
      按钮
    </t-button>
  </wx-view>
  <wx-view
    class="box align-bottom"
  >
    <t-button
      icon="app"
      shape="square"
      size="large"
      tClass="external-class"
      theme="primary"
    />
    <t-button
      icon="app"
      shape="square"
      tClass="external-class"
      theme="primary"
    />
    <t-button
      icon="app"
      shape="square"
      size="small"
      tClass="external-class"
      theme="primary"
    />
  </wx-view>
  <wx-view
    class="box align-bottom"
  >
    <t-button
      icon="app"
      shape="circle"
      size="large"
      tClass="external-class"
      theme="primary"
    />
    <t-button
      icon="app"
      shape="circle"
      tClass="external-class"
      theme="primary"
    />
    <t-button
      icon="app"
      shape="circle"
      size="small"
      tClass="external-class"
      theme="primary"
    />
  </wx-view>
</size>
`;
